--- a/boats.html
+++ b/boats.html
@@ -10,9 +10,9 @@
 <body onload="getBoats()">
 <nav class="navbar">
     <ul>
-        <li><a href="boats.html">Boats</a></li>
-        <li><a href="participants.html">Participants</a></li>
-        <li><a href="regattas.html">Regattas</a></li>
+        <li><a href="boats.html">Både</a></li>
+        <li><a href="participants.html">Deltagere</a></li>
+        <li><a href="regattas.html">Kapsejlads</a></li>
     </ul>
 </nav>
 <br>
