--- a/participants.html
+++ b/participants.html
@@ -8,9 +8,9 @@
 <body onload="loadParticipants()">
 <nav class="navbar">
   <ul>
-    <li><a href="boats.html">Boats</a></li>
-    <li><a href="participants.html">Participants</a></li>
-    <li><a href="regattas.html">Regattas</a></li>
+    <li><a href="boats.html">Både</a></li>
+    <li><a href="participants.html">Deltagere</a></li>
+    <li><a href="regattas.html">Kapsejlads</a></li>
   </ul>
 </nav>
 <br>
